--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.1
   firebase_core: ^2.9.0
-
+  google_sign_in: ^6.0.2
+  firebase_auth:
 
 dev_dependencies:
   flutter_test:
