--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.1
+  skeletons: ^0.0.3
+  syncfusion_flutter_charts: ^21.1.39
+  flutter_datetime_picker: ^1.5.1
+  image_picker: ^0.8.4
+  flutter_clean_calendar: ^1.1.0
 
 
 dev_dependencies:
@@ -58,6 +63,7 @@ flutter:
   assets:
     - assets/logo.jpg
     - assets/logo_google.jpg
+    - assets/anh_phuong.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
