update ui and icon app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   image_picker: ^0.8.4
   flutter_clean_calendar: ^1.1.0
+  date_picker_timeline: ^1.2.3
 
 
 dev_dependencies:
@@ -62,8 +63,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.jpg
-    - assets/logo_google.jpg
+    - assets/ic_google.png
     - assets/anh_phuong.jpg
+    - assets/ic_app.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
