--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -42,6 +41,10 @@ dependencies:
   image_picker: ^0.8.4
   flutter_clean_calendar: ^1.1.0
   date_picker_timeline: ^1.2.3
+  firebase_core:
+  firebase_auth:
+  firebase_database:
+  google_sign_in:
 
 
 dev_dependencies:
