--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ dependencies:
   firebase_database:
   google_sign_in:
   dropdown_button2: ^2.1.3
-
-
+  fluttertoast: ^8.2.2
+  intl:
 
 dev_dependencies:
   flutter_test:
